# apotheca-rs

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  main.rs  meta.rs  name.rs  runtime.rs
src/backends/: local.rs  mod.rs  s3.rs
tests/: integration.rs  s3.rs
