[package]
name = "apotheca"
version = "0.2.0"
edition = "2021"
description = "Named write-once store with a compare-and-swap pinax namespace. Bytes go in by name, come out by name; deposita are never overwritten, pinakes update via compare-and-swap."
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/pantheca/apotheca/apotheca-rs.git"
readme = "README.md"
keywords = ["storage", "write-once", "sha256", "immutable", "compare-and-swap"]
categories = ["filesystem", "command-line-utilities"]

[lib]
name = "apotheca"
path = "src/lib.rs"

[[bin]]
name = "apo"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"
clap = { version = "4", features = ["derive"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
