[package]
name = "apotheca"
version = "0.3.0"
edition = "2021"
description = "Named write-once store with a compare-and-swap pinax namespace. Bytes go in by name, come out by name; deposita are never overwritten, pinakes update via compare-and-swap."
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/pantheca/apotheca/apotheca-rs.git"
readme = "README.md"
keywords = ["storage", "write-once", "sha256", "immutable", "compare-and-swap"]
categories = ["filesystem", "command-line-utilities"]
exclude = ["CLAUDE.md", "TODO.md", "dev/"]

[lib]
name = "apotheca"
path = "src/lib.rs"

[[bin]]
name = "apo"
path = "src/main.rs"

[features]
default = []
# S3-compatible backends (AWS S3, Cloudflare R2, MinIO) via Apache Arrow's
# `object_store` crate. Pulls in tokio + bytes; the local backend stays
# dependency-free.
backend-s3 = ["dep:object_store", "dep:tokio", "dep:bytes"]
# Live-backend integration tests against MinIO / real S3-compatible
# servers. Implies backend-s3 since the tests use S3Config. Skipped by
# default `cargo test`; enable with `cargo test --features live-tests`.
live-tests = ["backend-s3"]

[dependencies]
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
object_store = { version = "0.13", features = ["aws"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
bytes = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
